# clumio-se-gists

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/: get_table_metrics.py  hello.py
src/test/: test_hello.py
